Fixed Issue where button text is not centered in other browsers

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ body {
     display: flex;
     text-align: center;
     align-items: center;
+    justify-content: center;
     font-size: 1rem;
     border: none;
     border-radius: 5px;
